# lucent

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
data/: credits.txt
demos/: CMakeLists.txt
demos/basic/: Basic.cpp  Basic.hpp
src/: CMakeLists.txt  Engine.cpp  Engine.hpp
src/core/: Array.hpp  Color.hpp  Core.hpp  Hash.hpp  Log.cpp  Log.hpp  Lucent.hpp  Math.hpp  Matrix4.hpp  Pool.hpp  Quaternion.hpp  Utility.cpp  Utility.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
src/debug/: DebugConsole.cpp  DebugConsole.hpp  Font.cpp  Font.hpp  Input.cpp  Input.hpp  TextMesh.cpp  TextMesh.hpp
src/device/: Buffer.hpp  Context.cpp  Context.hpp  Descriptor.cpp  Descriptor.hpp  DescriptorCache.cpp  DescriptorCache.hpp  Device.cpp  Device.hpp  Framebuffer.hpp  Input.cpp  Input.hpp  Keys.hpp  Pipeline.hpp  ResourceLimits.hpp  Shader.cpp  Shader.hpp  ShaderCache.cpp  ShaderCache.hpp  Texture.hpp
src/device/vulkan/: ShaderCache.cpp  ShaderCache.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommon.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFramebuffer.cpp  VulkanFramebuffer.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanTexture.cpp  VulkanTexture.hpp
src/features/: AmbientOcclusionPass.cpp  AmbientOcclusionPass.hpp  DebugOverlayPass.cpp  DebugOverlayPass.hpp  GeometryPass.cpp  GeometryPass.hpp  LightingPass.cpp  LightingPass.hpp  MomentShadowPass.cpp  MomentShadowPass.hpp  PostProcessPass.cpp  PostProcessPass.hpp  ScreenSpaceReflectionsPass.cpp  ScreenSpaceReflectionsPass.hpp
src/rendering/: AmbientOcclusionPass.cpp  AmbientOcclusionPass.hpp  DebugOverlayPass.cpp  DebugOverlayPass.hpp  Engine.cpp  Engine.hpp  Geometry.cpp  Geometry.hpp  GeometryPass.cpp  GeometryPass.hpp  LightingPass.cpp  LightingPass.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  MomentShadowPass.cpp  MomentShadowPass.hpp  PbrMaterial.cpp  PbrMaterial.hpp  PostProcessPass.cpp  PostProcessPass.hpp  RenderSettings.cpp  RenderSettings.hpp  Renderer.cpp  Renderer.hpp  SceneRenderer.cpp  SceneRenderer.hpp  ScreenSpaceReflectionsPass.cpp  ScreenSpaceReflectionsPass.hpp  StaticMesh.cpp  StaticMesh.hpp  View.cpp  View.hpp  Viewport.cpp  Viewport.hpp  frag.glsl  vert.glsl
src/rendering/shaders/: BRDF.frag  BRDF.shader  BRDF.vert  DebugFont.frag  DebugFont.shader  DebugFont.vert  IrradianceCube.frag  IrradianceCube.shader  IrradianceCube.vert  (+13 more)
src/scene/: Camera.cpp  Camera.hpp  ComponentPool.hpp  Components.cpp  Components.hpp  Entity.cpp  Entity.hpp  EntityIDPool.hpp  EntityPool.hpp  HdrImporter.cpp  HdrImporter.hpp  Importer.cpp  Importer.hpp  Lighting.hpp  Lights.hpp  ModelInstance.hpp  Scene.cpp  Scene.hpp  Transform.cpp  Transform.hpp
src/shaders/: BRDF.shader  Bloom.shader  Core.shader  Debug.shader  DebugFont.shader  DebugShape.shader  DepthOnly.shader  GTAO.shader  GTAODenoise.shader  GenGBuffer.shader  GenerateHiZ.shader  GeometryPass.shader  IBLCommon.shader  IBLGenerateBrdfLUT.shader  IBLPrefilterIrradiance.shader  IBLPrefilterRadiance.shader  IBLRectToCube.shader  LightingPass.shader  MinZ.shader  MomentShadow.shader  MomentShadowResolve.shader  PBR.shader  PostProcess.shader  PostProcessOutput.shader  PrefilterIrradiance.shader  RectToCube.shader  ResolveMoments.shader  ResolveSSR.shader  SSRConvolve.shader  SSRResolveReflections.shader  SSRTraceMinZ.shader  Skybox.shader  Standard.shader  TraceMinZ.shader  VertexInput.shader  View.shader
tests/: CMakeLists.txt
tests/scene/: ComponentTests.cpp  EntityTests.cpp
(+4 files in other folders)
